# llm-as-an-oracle

./: .gitignore  .rules  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEX.md  CONTRIBUTING.md  GEMINI.md  README.md  SECURITY.md  Slide-short.md  main.py  pyproject.toml
.claude/commands/: gh-issue  memlog  recon  review-branch  review-code
dev-docs/: architecture.md
dev-docs/core/: oracle-algorithm.md
dev-docs/decisions/: 001-human-escalation.md  002-adversarial-routing-and-deferred-human-responses.md
dev-docs/slides/: Slide-short.md  Verifier.md  slides.css  slides.html
docs/: FAQ.md  Slide-short.md  Slide.md  architecture.md  oracle-algorithm.md  slides.html
docs/slides/: Slide.md  Verifier.md  slides.html  verifier.html
examples/: 00_end_to_end.py  00_quickstart.py  01_core_tutorial.py  01_llm_as_an_oracle_tutorial.py  02_llm_as_an_oracle_tutorial.py  03_hands_on_example.py  04_human_oracle.py  05_human_oracle_live_model.py  06_adversarial_claim_verification.py  06_full_demo.py  07_adversarial_claim_verification.py  07_full_demo.py  README.md  end_to_end.py  llm_as_an_oracle_tutorial.py
scripts/: gh-issue
src/llm_oracle/: __init__.py  __main__.py  _cli.py
src/llm_oracle/core/: __init__.py  models.py  providers.py  strategy.py
src/llm_oracle/evaluation/: __init__.py  harness.py
src/llm_oracle/routing/: __init__.py  router.py
src/llm_oracle/strategies/: __init__.py  adversarial.py  judge.py  verifier.py
tests/: test_oracle.py
