[project]
name = "llm-as-oracle"
version = "0.1.0"
description = "LLM as Verifier · LLM as Judge · Evaluation Harness · Intelligent Router"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
gemini = ["google-genai>=0.8"]
all = [
  "openai>=1.0",
  "anthropic>=0.20",
  "google-genai>=0.8",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[dependency-groups]
dev = [
  "ipykernel>=7.2.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[project.scripts]
llm-oracle = "llm_oracle.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_oracle"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
indent-width = 2
src = ["src"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
