[project]
name = "llm-as-an-oracle"
version = "0.1.0"
description = "LLM as Verifier · LLM as Judge · Evaluation Harness · Intelligent Router"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Huascar Sanchez", email = "huascar@jellyfish.mozmail.com" },
]
keywords = [
  "language-models",
  "llm-evaluation",
  "llm-as-a-judge",
  "llm-as-a-verifier",
  "evaluation-harness",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]

dependencies = [
  "python-dotenv>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/hsanchez/llm-as-an-oracle"
Repository = "https://github.com/hsanchez/llm-as-an-oracle"
Issues = "https://github.com/hsanchez/llm-as-an-oracle/issues"

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.96.0"]
gemini = ["google-genai>=0.8"]
all = [
  "openai>=1.0",
  "anthropic>=0.96.0",
  "google-genai>=0.8",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]

[dependency-groups]
dev = [
  "anthropic>=0.96.0",
  "google-genai>=1.73.1",
  "ipykernel>=7.2.0",
  "openai>=2.32.0",
  "prek>=0.3.11",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ty>=0.0.34",
]

[project.scripts]
llm-oracle = "llm_oracle.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_oracle"]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.claude",
  "/.github",
  "/.rules",
  "/AGENTS.md",
  "/CLAUDE.md",
  "/CODEX.md",
  "/GEMINI.md",
  "/scripts",
  "/dev-docs",
  "/docs",
  "/examples"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
indent-width = 2
src = ["src"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
